fix mobile spacing issue (attempt-1)

--- a/src/app/home/page.module.scss
+++ b/src/app/home/page.module.scss
@@ -2,7 +2,7 @@
 
   @media (--xs) {
     flex-direction: column;
-    padding-bottom: 60px;
+    //padding-bottom: 60px;
   }
 }
 
