--- a/src/components/custom/Hello.module.scss
+++ b/src/components/custom/Hello.module.scss
@@ -1,3 +1,9 @@
+.btnWrapper {    
+    @media (--xs) {
+        margin-top: 60px;
+    }
+}
+
 .wrapper {
     display: flex;
     gap: var(--space-s);
